--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@mui/lab": "^5.0.0-alpha.85",
     "@mui/material": "^5.8.6",
     "@mui/x-data-grid": "^5.12.1",
+    "@react-google-maps/api": "^2.18.1",
     "@refinedev/cli": "^2.0.0",
     "@refinedev/core": "^4.0.0",
     "@refinedev/inferencer": "^3.0.0",
@@ -17,13 +18,17 @@
     "@refinedev/react-hook-form": "^4.0.0",
     "@refinedev/react-router-v6": "^4.0.0",
     "@refinedev/simple-rest": "^4.0.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/socket.io-client": "^3.0.0",
     "apexcharts": "^3.37.1",
+    "axios": "^1.3.5",
     "react": "^18.0.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.30.0",
-    "react-router-dom": "^6.8.1",
-    "react-scripts": "^5.0.0"
+    "react-router-dom": "^6.10.0",
+    "react-scripts": "^5.0.0",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
