--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^5.8.3",
     "@mui/lab": "^5.0.0-alpha.85",
     "@mui/material": "^5.8.6",
@@ -20,15 +24,17 @@
     "@refinedev/simple-rest": "^4.0.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/socket.io-client": "^3.0.0",
+    "antd": "^5.4.6",
     "apexcharts": "^3.37.1",
     "axios": "^1.3.5",
     "react": "^18.0.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.30.0",
-    "react-router-dom": "^6.10.0",
+    "react-router-dom": "^6.11.0",
     "react-scripts": "^5.0.0",
-    "socket.io-client": "^4.6.1"
+    "socket.io-client": "^4.6.1",
+    "ts-essentials": "^9.3.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
